
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${GTEST_INCLUDE_DIR}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( misc )
add_subdirectory( testvector )
add_subdirectory( tpg_network )
add_subdirectory( sa_fsim2 )
add_subdirectory( sa_fsim3 )
add_subdirectory( dtpg )


# ===================================================================
# テストターゲットの定義
# ===================================================================
